# Triangle

src/: CMakeLists.txt
src/Triangle/: CMakeLists.txt  predicates.c  triangle.c  triangle.h  triangle_config.h  triangle_io.c
src/Triangle/private/: predicates.h
